@@ -55,9 +55,16 @@ Changes to the Mercury standard library
     - pred `write_bitmap_range/5`
     - pred `write_bitmap_range/6`
 
+### Changes to the `builtin` module
+
+* The following obsolete predicate and function have been removed:
+
+    - func `promise_only_solution/1`
+    - pred `promise_only_solution_io/4`
+
 ### Changes to the `hash_table` module
 
-The following obsolete predicates have been removed:
+* The following obsolete predicates have been removed:
 
     - pred `char_hash/2`
     - pred `float_hash/2`
